; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_exit.c_complete_and_exit.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_exit.c_complete_and_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.completion = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @complete_and_exit(%struct.completion* %0, i64 %1) #0 {
  %3 = alloca %struct.completion*, align 8
  %4 = alloca i64, align 8
  store %struct.completion* %0, %struct.completion** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.completion*, %struct.completion** %3, align 8
  %6 = icmp ne %struct.completion* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load %struct.completion*, %struct.completion** %3, align 8
  %9 = call i32 @complete(%struct.completion* %8)
  br label %10

10:                                               ; preds = %7, %2
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @do_exit(i64 %11)
  ret void
}

declare dso_local i32 @complete(%struct.completion*) #1

declare dso_local i32 @do_exit(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
